Modificación de detalles empleado para ver las cuentas relacionadas

--- a/SIGIT/Views/Empleados/Listado.cshtml
+++ b/SIGIT/Views/Empleados/Listado.cshtml
@@ -57,9 +57,9 @@
                 </td>
                 <td>
                     
-                    <a class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", "Empleados", new { id = item.Id })" data-title="Editar Empleado">Editar</a> |
+                    <a class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Edit", "Empleados", new { id = item.Id })" data-title="Editar Empleado">Editar</a>
 
-                    <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", "Empleados", new { id = item.Id })" data-title="Detalles del empleado">Detalles</a> |
+                    <a class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Details", "Empleados", new { id = item.Id })" data-title="Detalles del empleado">Detalles</a>
 
                     <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
                 </td>
