Modificación de formularios de Usuarios del sistema

--- a/SIGIT/Views/Empleados/Index.cshtml
+++ b/SIGIT/Views/Empleados/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Relación de empleados</h1>
 
 <p>
     <a class="btn btn-outline-success" asp-action="Create" data-bs-toggle="modal" data-bs-target="#genericModal" data-url="@Url.Action("Create")" data-title="Nuevo Empleado">Nuevo Empleado</a>
