--- a/SIGIT/Views/UsuariosSistemas/Edit.cshtml
+++ b/SIGIT/Views/UsuariosSistemas/Edit.cshtml
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col-md-6">
                         <label asp-for="PasswordHash" class="control-label"></label>
-                        <input asp-for="PasswordHash" class="form-control" type="password" placeholder="Dejar en blanco para no cambiar" />
+                        <input asp-for="PasswordHash" class="form-control" type="password" placeholder="*************" />
                         <span asp-validation-for="PasswordHash" class="text-danger"></span>
                     </div>
                 </div>
@@ -106,5 +106,5 @@
 </div>
 
 @{
-    // CORREGIDO: Eliminada la sección de scripts
+    // Eliminada la sección de scripts
 }
