--- a/SIGIT/Views/Empleados/Details.cshtml
+++ b/SIGIT/Views/Empleados/Details.cshtml
@@ -2,6 +2,48 @@
 
 @{
     Layout = null;
+
+    // Concatenamos el nombre completo
+    var nombreCompleto = string.Join(" ", new[] { Model.Nombre, Model.Apellido }
+        .Where(s => !string.IsNullOrWhiteSpace(s)));
+
+    // Creamos el enlace 'mailto' (solo con destinatario y asunto)
+    var correoDestino = Model.CorreoPersonal;
+    var asunto = "Notificación de Cuentas - SIGIT";
+    var mailtoHref = $"mailto:{correoDestino}?subject={System.Net.WebUtility.UrlEncode(asunto)}";
+
+    // Creamos el CUERPO del correo que se copiará al portapapeles
+    var bodyBuilder = new System.Text.StringBuilder();
+    bodyBuilder.AppendLine($"Cordial saludo, {nombreCompleto}");
+    bodyBuilder.AppendLine();
+    bodyBuilder.AppendLine("Remito los datos de conexión para las aplicaciones de Autofinanciera a las cuales tiene acceso.");
+    bodyBuilder.AppendLine();
+    bodyBuilder.AppendLine("URL SIICON: http://gestion.siicon.com.co");
+    bodyBuilder.AppendLine("URL Qurii: http://qurii.co");
+    bodyBuilder.AppendLine("URL HelpDesk: http://helpdesk.serven.com.co:8080/");
+    bodyBuilder.AppendLine("URL Tableros: https://sites.google.com/autofinanciera.com.co/repositoriotableros/inicio");
+    bodyBuilder.AppendLine();
+    bodyBuilder.AppendLine("Se otorgará solamente acceso a los tableros a las cuentas corporativas.");
+    bodyBuilder.AppendLine("Tenga presente que los usuarios y contraseñas son personales e intransferibles, abstenerse de compartir esta información ya que esto va en contra de las normas de seguridad de la información.");
+    bodyBuilder.AppendLine();
+    bodyBuilder.AppendLine("DATOS DEL USUARIO PARA NOTIFICACIONES");
+    bodyBuilder.AppendLine($"Correo de notificaciones: {Model.CorreoPersonal}");
+    bodyBuilder.AppendLine($"Teléfono registrado para comunicaciones: {Model.Celular}");
+    bodyBuilder.AppendLine($"Área: {Model.Area.NombreArea}");
+    bodyBuilder.AppendLine($"Ciudad: {Model.Ciudad.NombreCiudad}");
+    bodyBuilder.AppendLine($"Compañía: {Model.Compania.NombreCompania}");
+    bodyBuilder.AppendLine();
+    bodyBuilder.AppendLine("CUENTAS ASIGNADAS:");
+
+    foreach (var cuenta in Model.CuentasEmpleados)
+    {
+        bodyBuilder.AppendLine($"Aplicación: {cuenta.Aplicacion.NombreAplicacion}");
+        bodyBuilder.AppendLine($"Usuario: {cuenta.Usuario}");
+        bodyBuilder.AppendLine($"Contraseña: {cuenta.Contrasena}");
+        bodyBuilder.AppendLine();
+    }
+
+    var emailBody = bodyBuilder.ToString();
 }
 
 <div class="modal-body">
@@ -14,14 +56,10 @@
                 @Html.DisplayFor(model => model.Cedula)
             </dd>
             <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Nombre)
+                Nombre Completo
             </dt>
             <dd class="col-sm-9">
-                @{
-                    var partesDelNombre = new[] { Model.Nombre, Model.SegundoNombre, Model.Apellido, Model.SegundoApellido };
-                    var partesNoVacias = partesDelNombre.Where(s => !string.IsNullOrWhiteSpace(s));
-                    @string.Join(" ", partesNoVacias)
-                }
+                @string.Join(" ", new[] { Model.Nombre, Model.SegundoNombre, Model.Apellido, Model.SegundoApellido }.Where(s => !string.IsNullOrWhiteSpace(s)))
             </dd>
             <dt class="col-sm-3">
                 @Html.DisplayNameFor(model => model.Celular)
@@ -85,42 +123,70 @@
             </dd>
         </dl>
     </div>
-</div>
-<hr />
+    <hr />
 
-<h3>Cuentas asignadas</h3>
+    <h3>Cuentas asignadas</h3>
 
-@if (Model.CuentasEmpleados.Any())
-{
-    <table class="table table-striped table-sm" style="font-size: 0.9em;">
-        <thead>
-            <tr>
-                <th>Aplicación</th>
-                <th>Usuario</th>
-                <th>Contraseña</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var cuenta in Model.CuentasEmpleados)
-            {
+    @if (Model.CuentasEmpleados.Any())
+    {
+        <table class="table table-striped table-sm" style="font-size: 0.9em;">
+            <thead>
                 <tr>
-                    <td>@Html.DisplayFor(modelItem => cuenta.Aplicacion.NombreAplicacion)</td>
-                    <td>@Html.DisplayFor(modelItem => cuenta.Usuario)</td>
-                    <td>@Html.DisplayFor(modelItem => cuenta.Contrasena)</td>
+                    <th>Aplicación</th>
+                    <th>Usuario</th>
+                    <th>Contraseña</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-    
-}
-else
-{
-    <p class="text-muted">Este empleado no tiene cuentas asignadas.</p>
-}
+            </thead>
+            <tbody>
+                @foreach (var cuenta in Model.CuentasEmpleados)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => cuenta.Aplicacion.NombreAplicacion)</td>
+                        <td>@Html.DisplayFor(modelItem => cuenta.Usuario)</td>
 
+                        <td>@Html.DisplayFor(modelItem => cuenta.Contrasena)</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    }
+    else
+    {
+        <p class="text-muted">Este empleado no tiene cuentas asignadas.</p>
+    }
+
+<textarea id="emailNotificationBody" style="position: absolute; left: -9999px; opacity: 0;" readonly>@emailBody</textarea>
+
+</div>
 
 <div class="modal-footer">
     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
-    @* <a asp-action="Edit" asp-route-id="@Model?.EmpleadoId">Edit</a> |
-    <a asp-action="Index">Back to List</a> *@
+    <button type="button" id="copyEmailButton" class="btn btn-primary">Copiar Notificación</button>
+    <a href="@mailtoHref" target="_blank" class="btn btn-success">Abrir Correo</a>
 </div>
+
+
+<script>
+    $(document).ready(function() {
+        $("#copyEmailButton").on("click", function() {
+            var copyText = document.getElementById("emailNotificationBody");
+            copyText.select();
+            copyText.setSelectionRange(0, 99999);
+
+            try {
+                document.execCommand("copy");
+
+                var originalText = $(this).text();
+                $(this).text("¡Copiado!").addClass("btn-success").removeClass("btn-primary");
+
+                setTimeout(() => {
+                     $(this).text(originalText).addClass("btn-primary").removeClass("btn-success");
+                }, 2000);
+
+            } catch (err) {
+                alert("Error al copiar. Por favor, cópielo manualmente.");
+            }
+        });
+    });
+</script>
